--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Przekierowanie do Mój Lewiatan</title>
+    <title>Przekierowanie do Mój Lewiatan w zależności od systemu</title>
 </head>
 <body>
-    <h1>Przekierowywanie...</h1>
-    <p>Jeśli nie zostaniesz automatycznie przekierowany, <a href="https://mojlewiatan.pl/">kliknij tutaj</a>.</p>
-
     <script>
     function redirectToAppStore() {
         var userAgent = navigator.userAgent || navigator.vendor || window.opera;
